@@ -184,7 +184,7 @@ public class MUD extends Thread implements MudHost
 					final int maxAtThisAddress=6;
 					if(!CMSecurity.isDisabled(CMSecurity.DisFlag.CONNSPAMBLOCK))
 					{
-						if(!CMProps.isOnWhiteList(CMProps.WhiteList.CONNS, address))
+						if(!CMProps.isOnWhiteList(CMProps.WhiteList.IPSCONN, address))
 						{
 							if(CMSecurity.isIPBlocked(address))
 								proceed = ConnectState.BANNED;
