@@ -9,16 +9,20 @@
  	<link rel="grinder icon" href="/images/grinder.ico" >
 	<script language=JavaScript>
 	<!--
-		function ClearClicked(action, typ)
+		function DelClicked(fld, typ)
 		{
-			document.RESOURCES.NEWWHITELIST.value='';
-			document.RESOURCES.action=action;
-			document.RESOURCES.submit();
+			fld.value='';
+			document.WHITELIST.FUNC.value = 'DELETE';
+			document.WHITELIST.FTYP.value = typ;
+			document.WHITELIST.action='/grinder/whitelists.cmvp';
+			document.WHITELIST.submit();
 		}
-		function Clicked(action)
+		function AddClicked(typ)
 		{
-			document.RESOURCES.action=action;
-			document.RESOURCES.submit();
+			document.WHITELIST.FUNC.value = 'ADD';
+			document.WHITELIST.FTYP.value = typ;
+			document.WHITELIST.action='/grinder/whitelists.cmvp';
+			document.WHITELIST.submit();
 		}
 		function Refresh()
 		{
@@ -28,6 +32,7 @@
 	</script>
 </head>
 <body BGCOLOR=BLACK>
+	<FONT COLOR=WHITE SIZE=-1>
 	<TABLE WIDTH=100% BORDER=0><TR>
 	<TD WIDTH=33% ALIGN=LEFT VALIGN=TOP></TD>
 	<TD WIDTH=33% ALIGN=CENTER VALIGN=TOP>
@@ -50,90 +55,87 @@
 	</TR>
 	</TABLE>
 <CENTER>
-<FORM  ACCEPT-CHARSET="UTF-8" NAME=WHITE_IPCONN TARGET=_top METHOD=POST ACTION="whitelists.cmvp">
+<FORM  ACCEPT-CHARSET="UTF-8" NAME=WHITELIST TARGET=_top METHOD=POST ACTION="whitelists.cmvp">
 	<INPUT TYPE=HIDDEN NAME=AUTH VALUE="@Authenticate?AUTH@">
-	<CENTER><FONT COLOR=RED><B>@WhiteListMgr?DELETE&IPCONN@ @WhiteListMgr?ADD&IPCONN@</B></FONT></CENTER>
+	<INPUT TYPE=HIDDEN NAME=FUNC VALUE="">
+	<INPUT TYPE=HIDDEN NAME=FTYP VALUE="">
+	<CENTER><FONT COLOR=RED><B>
+	@if?CheckReqParm?FUNC=DELETE@ @WhiteListMgr?DELETE&IPSCONN@ @endif@ 
+	@if?CheckReqParm?FUNC=ADD@ @WhiteListMgr?ADD&IPSCONN@ @endif@
+	</B></FONT></CENTER>
 	<BR>
 	<TABLE WIDTH=100% BORDER=1>
 	<TR><TD WIDTH=100% COLSPAN=4 BGCOLOR=WHITE ALIGN=CENTER><FONT COLOR=BLACK><H2>IP Address Whitelist Management</H2></FONT></TD></TR>
-	@WhiteListMgr?RESET&IPCONN@
+	@WhiteListMgr?RESET&IPSCONN@
 	@loop@
 	<TR>
-	@WhiteListMgr?NEXT&IPCONN@<TD WIDTH=33%><INPUT TYPE=RADIO NAME=BANNEDONE_IPCONN VALUE="@WhiteListMgr?IPCONN@"><FONT COLOR=WHITE><B>@WhiteListMgr?IPCONN@</B></FONT></TD>
-	@WhiteListMgr?NEXT&EMPTYOK&IPCONN@<TD WIDTH=33%><INPUT TYPE=RADIO NAME=BANNEDONE_IPCONN VALUE="@WhiteListMgr?IPCONN@"><FONT COLOR=WHITE><B>@WhiteListMgr?IPCONN@</B></FONT></TD>
-	@WhiteListMgr?NEXT&EMPTYOK&IPCONN@<TD WIDTH=33%><INPUT TYPE=RADIO NAME=BANNEDONE_IPCONN VALUE="@WhiteListMgr?IPCONN@"><FONT COLOR=WHITE><B>@WhiteListMgr?IPCONN@</B></FONT></TD>
+	@WhiteListMgr?NEXT&IPSCONN@<TD WIDTH=33%><INPUT TYPE=RADIO NAME=WHITELIST_IPSCONN VALUE="@WhiteListMgr?IPSCONN@"><FONT COLOR=WHITE><B>@WhiteListMgr?IPSCONN@</B></FONT></TD>
+	@WhiteListMgr?NEXT&EMPTYOK&IPSCONN@<TD WIDTH=33%><INPUT TYPE=RADIO NAME=WHITELIST_IPSCONN VALUE="@WhiteListMgr?IPSCONN@"><FONT COLOR=WHITE><B>@WhiteListMgr?IPSCONN@</B></FONT></TD>
+	@WhiteListMgr?NEXT&EMPTYOK&IPSCONN@<TD WIDTH=33%><INPUT TYPE=RADIO NAME=WHITELIST_IPSCONN VALUE="@WhiteListMgr?IPSCONN@"><FONT COLOR=WHITE><B>@WhiteListMgr?IPSCONN@</B></FONT></TD>
 	</TR>
 	@back@
 	<TR>
-	<TD WIDTH=100% COLSPAN=3><FONT COLOR=WHITE><B>Add New: </B></FONT><INPUT TYPE=TEXT SIZE=50 MAXLENGTH=255 NAME=NEWBANNEDONE1></TD>
+	<TD WIDTH=100% COLSPAN=3><FONT COLOR=WHITE><B>Add New: </B></FONT><INPUT TYPE=TEXT SIZE=50 MAXLENGTH=255 NAME=NEWWHITELIST_IPSCONN></TD>
 	</TR>
 	</TABLE>
 	<P>
 	<TABLE WIDTH=100% BORDER=0>
 	<TR>
 	<TD WIDTH=50% ALIGN=CENTER>
-	<INPUT TYPE=BUTTON NAME=DELGO VALUE="Delete selected" ONCLICK="ClearClicked('/grinder/whitelists.cmvp','1');">
+	<INPUT TYPE=BUTTON NAME=DELGO VALUE="Delete selected" ONCLICK="DelClicked(document.WHITELIST.NEWWHITELIST_IPSCONN,'IPSCONN');">
 	</TD>
 	<TD WIDTH=50% ALIGN=CENTER>
-	<INPUT TYPE=BUTTON NAME=ADDNEW VALUE="Add New" ONCLICK="Clicked('/grinder/whitelists.cmvp','1');">
+	<INPUT TYPE=BUTTON NAME=ADDNEW VALUE="Add New" ONCLICK="AddClicked('IPSCONN');">
 	</TD>
 	</TABLE>
-</FORM>
-<FORM  ACCEPT-CHARSET="UTF-8" NAME=WHITE_LOGINS TARGET=_top METHOD=POST ACTION="whitelists.cmvp">
-	<INPUT TYPE=HIDDEN NAME=AUTH VALUE="@Authenticate?AUTH@">
-	<CENTER><FONT COLOR=RED><B>@WhiteListMgr?DELETE&LOGINS@ @WhiteListMgr?ADD&LOGINS@</B></FONT></CENTER>
 	<BR>
 	<TABLE WIDTH=100% BORDER=1>
-	<TR><TD WIDTH=100% COLSPAN=4 BGCOLOR=WHITE ALIGN=CENTER><FONT COLOR=BLACK><H2>IP Address Whitelist Management</H2></FONT></TD></TR>
+	<TR><TD WIDTH=100% COLSPAN=4 BGCOLOR=WHITE ALIGN=CENTER><FONT COLOR=BLACK><H2>Login Whitelist Management</H2></FONT></TD></TR>
 	@WhiteListMgr?RESET&LOGINS@
 	@loop@
 	<TR>
-	@WhiteListMgr?NEXT&LOGINS@<TD WIDTH=33%><INPUT TYPE=RADIO NAME=BANNEDONE_LOGINS VALUE="@WhiteListMgr?LOGINS@"><FONT COLOR=WHITE><B>@WhiteListMgr?LOGINS@</B></FONT></TD>
-	@WhiteListMgr?NEXT&EMPTYOK&LOGINS@<TD WIDTH=33%><INPUT TYPE=RADIO NAME=BANNEDONE_LOGINS VALUE="@WhiteListMgr?LOGINS@"><FONT COLOR=WHITE><B>@WhiteListMgr?LOGINS@</B></FONT></TD>
-	@WhiteListMgr?NEXT&EMPTYOK&LOGINS@<TD WIDTH=33%><INPUT TYPE=RADIO NAME=BANNEDONE_LOGINS VALUE="@WhiteListMgr?LOGINS@"><FONT COLOR=WHITE><B>@WhiteListMgr?LOGINS@</B></FONT></TD>
+	@WhiteListMgr?NEXT&LOGINS@<TD WIDTH=33%><INPUT TYPE=RADIO NAME=WHITELIST_LOGINS VALUE="@WhiteListMgr?LOGINS@"><FONT COLOR=WHITE><B>@WhiteListMgr?LOGINS@</B></FONT></TD>
+	@WhiteListMgr?NEXT&EMPTYOK&LOGINS@<TD WIDTH=33%><INPUT TYPE=RADIO NAME=WHITELIST_LOGINS VALUE="@WhiteListMgr?LOGINS@"><FONT COLOR=WHITE><B>@WhiteListMgr?LOGINS@</B></FONT></TD>
+	@WhiteListMgr?NEXT&EMPTYOK&LOGINS@<TD WIDTH=33%><INPUT TYPE=RADIO NAME=WHITELIST_LOGINS VALUE="@WhiteListMgr?LOGINS@"><FONT COLOR=WHITE><B>@WhiteListMgr?LOGINS@</B></FONT></TD>
 	</TR>
 	@back@
 	<TR>
-	<TD WIDTH=100% COLSPAN=3><FONT COLOR=WHITE><B>Add New: </B></FONT><INPUT TYPE=TEXT SIZE=50 MAXLENGTH=255 NAME=NEWBANNEDONE1></TD>
+	<TD WIDTH=100% COLSPAN=3><FONT COLOR=WHITE><B>Add New: </B></FONT><INPUT TYPE=TEXT SIZE=50 MAXLENGTH=255 NAME=NEWWHITELIST_LOGINS></TD>
 	</TR>
 	</TABLE>
 	<P>
 	<TABLE WIDTH=100% BORDER=0>
 	<TR>
 	<TD WIDTH=50% ALIGN=CENTER>
-	<INPUT TYPE=BUTTON NAME=DELGO VALUE="Delete selected" ONCLICK="ClearClicked('/grinder/whitelists.cmvp','2');">
+	<INPUT TYPE=BUTTON NAME=DELGO VALUE="Delete selected" ONCLICK="DelClicked(document.WHITELIST.NEWWHITELIST_LOGINS,'LOGINS');">
 	</TD>
 	<TD WIDTH=50% ALIGN=CENTER>
-	<INPUT TYPE=BUTTON NAME=ADDNEW VALUE="Add New" ONCLICK="Clicked('/grinder/whitelists.cmvp','2');">
+	<INPUT TYPE=BUTTON NAME=ADDNEW VALUE="Add New" ONCLICK="AddClicked('LOGINS');">
 	</TD>
 	</TABLE>
-</FORM>
-<FORM  ACCEPT-CHARSET="UTF-8" NAME=WHITE_NEWPLAYERS TARGET=_top METHOD=POST ACTION="whitelists.cmvp">
-	<INPUT TYPE=HIDDEN NAME=AUTH VALUE="@Authenticate?AUTH@">
-	<CENTER><FONT COLOR=RED><B>@WhiteListMgr?DELETE&NEWPLAYERS@ @WhiteListMgr?ADD&NEWPLAYERS@</B></FONT></CENTER>
 	<BR>
 	<TABLE WIDTH=100% BORDER=1>
-	<TR><TD WIDTH=100% COLSPAN=4 BGCOLOR=WHITE ALIGN=CENTER><FONT COLOR=BLACK><H2>IP Address Whitelist Management</H2></FONT></TD></TR>
-	@WhiteListMgr?RESET&NEWPLAYERS@
+	<TR><TD WIDTH=100% COLSPAN=4 BGCOLOR=WHITE ALIGN=CENTER><FONT COLOR=BLACK><H2>New Player Whitelist Management</H2></FONT></TD></TR>
+	@WhiteListMgr?RESET&IPSNEWPLAYERS@
 	@loop@
 	<TR>
-	@WhiteListMgr?NEXT&NEWPLAYERS@<TD WIDTH=33%><INPUT TYPE=RADIO NAME=BANNEDONE_NEWPLAYERS VALUE="@WhiteListMgr?NEWPLAYERS@"><FONT COLOR=WHITE><B>@WhiteListMgr?NEWPLAYERS@</B></FONT></TD>
-	@WhiteListMgr?NEXT&EMPTYOK&NEWPLAYERS@<TD WIDTH=33%><INPUT TYPE=RADIO NAME=BANNEDONE_NEWPLAYERS VALUE="@WhiteListMgr?NEWPLAYERS@"><FONT COLOR=WHITE><B>@WhiteListMgr?NEWPLAYERS@</B></FONT></TD>
-	@WhiteListMgr?NEXT&EMPTYOK&NEWPLAYERS@<TD WIDTH=33%><INPUT TYPE=RADIO NAME=BANNEDONE_NEWPLAYERS VALUE="@WhiteListMgr?NEWPLAYERS@"><FONT COLOR=WHITE><B>@WhiteListMgr?NEWPLAYERS@</B></FONT></TD>
+	@WhiteListMgr?NEXT&IPSNEWPLAYERS@<TD WIDTH=33%><INPUT TYPE=RADIO NAME=WHITELIST_IPSNEWPLAYERS VALUE="@WhiteListMgr?IPSNEWPLAYERS@"><FONT COLOR=WHITE><B>@WhiteListMgr?IPSNEWPLAYERS@</B></FONT></TD>
+	@WhiteListMgr?NEXT&EMPTYOK&IPSNEWPLAYERS@<TD WIDTH=33%><INPUT TYPE=RADIO NAME=WHITELIST_IPSNEWPLAYERS VALUE="@WhiteListMgr?IPSNEWPLAYERS@"><FONT COLOR=WHITE><B>@WhiteListMgr?IPSNEWPLAYERS@</B></FONT></TD>
+	@WhiteListMgr?NEXT&EMPTYOK&IPSNEWPLAYERS@<TD WIDTH=33%><INPUT TYPE=RADIO NAME=WHITELIST_IPSNEWPLAYERS VALUE="@WhiteListMgr?IPSNEWPLAYERS@"><FONT COLOR=WHITE><B>@WhiteListMgr?IPSNEWPLAYERS@</B></FONT></TD>
 	</TR>
 	@back@
 	<TR>
-	<TD WIDTH=100% COLSPAN=3><FONT COLOR=WHITE><B>Add New: </B></FONT><INPUT TYPE=TEXT SIZE=50 MAXLENGTH=255 NAME=NEWBANNEDONE1></TD>
+	<TD WIDTH=100% COLSPAN=3><FONT COLOR=WHITE><B>Add New: </B></FONT><INPUT TYPE=TEXT SIZE=50 MAXLENGTH=255 NAME=NEWWHITELIST_IPSNEWPLAYERS></TD>
 	</TR>
 	</TABLE>
 	<P>
 	<TABLE WIDTH=100% BORDER=0>
 	<TR>
 	<TD WIDTH=50% ALIGN=CENTER>
-	<INPUT TYPE=BUTTON NAME=DELGO VALUE="Delete selected" ONCLICK="ClearClicked('/grinder/whitelists.cmvp','NEWPLAYERS');">
+	<INPUT TYPE=BUTTON NAME=DELGO VALUE="Delete selected" ONCLICK="DelClicked(document.WHITELIST.NEWWHITELIST_IPSNEWPLAYERS,'IPSNEWPLAYERS');">
 	</TD>
 	<TD WIDTH=50% ALIGN=CENTER>
-	<INPUT TYPE=BUTTON NAME=ADDNEW VALUE="Add New" ONCLICK="Clicked('/grinder/whitelists.cmvp','NEWPLAYERS');">
+	<INPUT TYPE=BUTTON NAME=ADDNEW VALUE="Add New" ONCLICK="AddClicked('IPSNEWPLAYERS');">
 	</TD>
 	</TABLE>
 </FORM>
