@@ -8,6 +8,7 @@
   7. Clans now support mud-yearly dues
   8. New weather type: FOG, with weatheraffects support
   9. New chant: Summon Fog
+ 10. MUDGrinder Player Manager now links to a WhiteList editor.
 
 # Build 5.9.12 Release 1/17/2022
   *. DB Changes: CMCOLR field in CMCHAR increased in size to 255 chars, CMSNAM field added to CMBKLG
